package businesslogic;

public class SuggestionsHandler extends Handler {
    @Override
    protected void pullData() {
    }

    @Override
    protected void render() {
    }

    @Override
    protected void handleInput() {
    }
}
