import businesslogic.NavigationManager;

public class Main {
 public static void main(String[] args){
    NavigationManager nm = new NavigationManager();
    nm.start();
 }
}
