package businesslogic;

public abstract class Handler {


    public static final String ANSI_RESET = "\u001B[0m";
    public static final String ANSI_BLACK = "\u001B[30m";
    public static final String ANSI_RED = "\u001B[31m";
    public static final String ANSI_GREEN = "\u001B[32m";
    public static final String ANSI_YELLOW = "\u001B[33m";
    public static final String ANSI_BLUE = "\u001B[34m";
    public static final String ANSI_PURPLE = "\u001B[35m";
    public static final String ANSI_CYAN = "\u001B[36m";
    public static final String ANSI_WHITE = "\u001B[37m";

    protected static NavigationManager navigationManager = new NavigationManager();

    public abstract State update(State state);


    //TODO add clearscreen to all handlers
    protected static void clearScreen() {
        System.out.print("\033[H\033[2J");
        System.out.flush();
    }

    protected static void printError(String error){
        System.out.println(" ");
        System.out.println(ANSI_RED+error+ANSI_RESET);
        System.out.println(" ");
    }

}
