package model;

import model.Playlist;
import model.Track;

import java.util.*;


public class PlaybackQueue {


    public PlaybackQueue() {
    }


    private Queue<Track> queue;


    public void PlaybackQueue() {
        // TODO implement here
    }


    public void addTrack(Track track) {
        // TODO implement here
        return null;
    }


    public void addPlaylist(Playlist playlist) {
        // TODO implement here
        return null;
    }


    public void clear() {
        // TODO implement here
        return null;
    }

}